--- a/examples/tools/src/main/resources/log4j.properties
+++ b/examples/tools/src/main/resources/log4j.properties
@@ -3,7 +3,7 @@
 # By default, show only informative messages (INFO), and log to
 # the console. Change to INFO, DEBUG or TRACE for more messages, or to
 # WARN, ERROR or FATAL to show less messages:
-log4j.rootLogger=INFO, CONSOLE
+log4j.rootLogger=TRACE, CONSOLE
 
 # One can override the log level for a particular package or class :
 log4j.logger.tools.SayHello=TRACE
