--- a/pom.xml
+++ b/pom.xml
@@ -257,6 +257,26 @@
                         </goals>
                     </execution>
                     <execution>
+                        <id>lexer-so-comp.sh</id>
+                        <configuration>
+                            <executable>./src/test/script/lexer-so-comp.sh</executable>
+                        </configuration>
+                        <phase>test</phase>
+                        <goals>
+                            <goal>exec</goal>
+                        </goals>
+                    </execution>
+                     <execution>
+                        <id>parser-so-comp.sh</id>
+                        <configuration>
+                            <executable>./src/test/script/lexer-so-comp.sh</executable>
+                        </configuration>
+                        <phase>test</phase>
+                        <goals>
+                            <goal>exec</goal>
+                        </goals>
+                    </execution>
+                    <execution>
                         <id>decompile</id>
                         <configuration>
                             <executable>./src/test/script/decompile.sh</executable>
