--- a/pom.xml
+++ b/pom.xml
@@ -276,6 +276,16 @@
                             <goal>exec</goal>
                         </goals>
                     </execution>
+                    <execution>
+                        <id>gencode-so</id>
+                        <configuration>
+                            <executable>./src/test/script/gencode-so.sh</executable>
+                        </configuration>
+                        <phase>test</phase>
+                        <goals>
+                            <goal>exec</goal>
+                        </goals>
+                    </execution>
                 </executions>
             </plugin>
 
