ajout du script gencode-so-err.sh dans pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -306,6 +306,16 @@
                             <goal>exec</goal>
                         </goals>
                     </execution>
+                    <execution>
+                        <id>gencode-so-err</id>
+                        <configuration>
+                            <executable>./src/test/script/gencode-so-err.sh</executable>
+                        </configuration>
+                        <phase>test</phase>
+                        <goals>
+                            <goal>exec</goal>
+                        </goals>
+                    </execution>
                 </executions>
             </plugin>
 
