--- a/pom.xml
+++ b/pom.xml
@@ -347,6 +347,16 @@
                             <goal>exec</goal>
                         </goals>
                     </execution>
+                    <execution>
+                        <id>CodeGen-Objet</id>
+                        <configuration>
+                            <executable>./src/test/script/CodeGen-Objet.sh</executable>
+                        </configuration>
+                        <phase>test</phase>
+                        <goals>
+                            <goal>exec</goal>
+                        </goals>
+                    </execution>
                 </executions>
             </plugin>
 
